@@ -1,10 +1,14 @@
 package objetos;
 
-import java.sql.Date;
-import java.time.Instant;
 import java.time.LocalTime;
+import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
+import java.util.stream.Collectors;
+
+enum EstadoEstacion {
+	OPERATIVA, EN_MANTENIMIENTO
+}
 
 public class Estacion implements Comparable<Estacion>{
 	
@@ -17,11 +21,6 @@ public class Estacion implements Comparable<Estacion>{
 		return listEstaciones.remove(e);
 		//TODO Comunicar DAO la eliminacion de e
 	}
-	
-	
-	
-	public static final Boolean EN_MANTENIMIENTO=true;
-	public static final Boolean OPERATIVA=false;
 	/*
 	 * TODO
 	 * Comunicarse con EstacionDAO para cargar todas las estaciones (método estático)
@@ -31,33 +30,42 @@ public class Estacion implements Comparable<Estacion>{
 	public static List<Estacion> buscarID(short id){
 		return listEstaciones
 				.stream()
-				.filter( (e) -> e.getID()==id)
-				.toList();
+				.filter( (e) -> e.getId()==id)
+				.collect(Collectors.toList());
 	}
 	public static List<Estacion> buscarNombre(String name){
 		return listEstaciones
 				.stream()
 				.filter( (e) -> e.getNombre().equals(name))
-				.toList(); //capaz cambiar
+				.collect(Collectors.toList());
 	}
 	public static List<Estacion> buscarHorarioApertura(LocalTime lt){
 		return listEstaciones
 				.stream()
 				.filter( (e) -> e.getHorarioApertura().equals(lt))
-				.toList();
+				.collect(Collectors.toList());
 	}
 	public static List<Estacion> buscarHorarioCierre(LocalTime lt){
 		return listEstaciones
 				.stream()
 				.filter( (e) -> e.getHorarioCierre().equals(lt))
-				.toList();
+				.collect(Collectors.toList());
 	}
 	
-	public List<Estacion> estacionesInmediatas() {
+	public Estacion(Short id, String nombre, LocalTime horarioApertura, LocalTime horarioCierre, EstadoEstacion estado) {
+		this.id=id;
+		this.nombre=nombre;
+		this.horarioApertura=horarioApertura;
+		this.horarioCierre=horarioCierre;
+		this.estado=estado;
+		listEstaciones.add(this);
+	}
+	
+	public List<Estacion> subgrafoInmediato() {
 		return this.listConexiones.stream()
-								  .filter((c) -> c.e1.equals(this))
-						          .map(c -> c.e2)
-						          .toList();
+				  .filter((c) -> c.getE1().equals(this))
+		          .map(c -> c.getE2())
+		          .collect(Collectors.toList());
 	}
 	
 	
@@ -67,45 +75,87 @@ public class Estacion implements Comparable<Estacion>{
 	 * Notar que no hay setID(), esto es porque no debe ser posible cambiar el ID, ya que esto va a ser PK en la BD
 	 */
 	
-	public Short id;
-	public String nombre;
-	public Integer pagerank; //?
-	public Double pesoTotal; //?
-	public LocalTime horarioApertura;
-	public LocalTime horarioCierre;
-	public java.util.Date fechaUltimoMantenimiento; //Por default, el ultimo mantenimiento es su dia de ingreso
-	public Boolean mantenimiento;
-	public HashSet<Conexion> listConexiones=new HashSet<Conexion>();
+	private Short id;
+	private String nombre;
+	private LocalTime horarioApertura;
+	private LocalTime horarioCierre;
+	private EstadoEstacion estado;
+	private java.util.Date fechaUltimoMantenimiento; //Por default, el ultimo mantenimiento es su dia de ingreso
+	private HashSet<Conexion> listConexiones=new HashSet<Conexion>();
+	private Double pagerank = 1.0; //?
+	private Double pesoTotal = 0.0; //?
+	private ArrayList<Mantenimiento> listaMantenimientos;
 	
+	//METODOS GETTERS AND SETTERS
 	
-	
-	public Short getID() {
+	public Short getId() {
 		return id;
+	}
+	public void setId(Short id) {
+		this.id = id;
 	}
 	public String getNombre() {
 		return nombre;
 	}
+	public void setNombre(String nombre) {
+		this.nombre = nombre;
+	}
 	public LocalTime getHorarioApertura() {
 		return horarioApertura;
+	}
+	public void setHorarioApertura(LocalTime horarioApertura) {
+		this.horarioApertura = horarioApertura;
 	}
 	public LocalTime getHorarioCierre() {
 		return horarioCierre;
 	}
-	public Boolean enMantenimiento() {
-		return mantenimiento;
+	public void setHorarioCierre(LocalTime horarioCierre) {
+		this.horarioCierre = horarioCierre;
 	}
-	
-	public void setNombre(String nuevo) {
-		nombre=nuevo;
+	public String getEstado() {
+		return estado.name();
 	}
-	public void setHorarioApertura(LocalTime lt) {
-		horarioApertura=lt;
+	public void setMantenimiento(String descripcion) {
+		this.estado = EstadoEstacion.EN_MANTENIMIENTO;
+		listaMantenimientos.add(new Mantenimiento(descripcion));
 	}
-	public void setHorarioCierre(LocalTime lt) {
-		horarioCierre=lt;
+	public void setMantenimiento() {
+		this.estado = EstadoEstacion.EN_MANTENIMIENTO;
+		listaMantenimientos.add(new Mantenimiento());
 	}
-	public void setMantenimiento(Boolean enMante) {
-		mantenimiento=enMante;
+	public void setOperativa(String descripcion) {
+		Mantenimiento ultimoMantenimiento = listaMantenimientos.get(listaMantenimientos.size()-1);
+		ultimoMantenimiento.finMantenimiento(descripcion);
+		this.estado = EstadoEstacion.OPERATIVA;
+	}
+	public void setOperativa() {
+		Mantenimiento ultimoMantenimiento = listaMantenimientos.get(listaMantenimientos.size()-1);
+		ultimoMantenimiento.finMantenimiento();
+		this.estado = EstadoEstacion.OPERATIVA;
+	}
+	public java.util.Date getFechaUltimoMantenimiento() {
+		return fechaUltimoMantenimiento;
+	}
+	public void setFechaUltimoMantenimiento(java.util.Date fechaUltimoMantenimiento) {
+		this.fechaUltimoMantenimiento = fechaUltimoMantenimiento;
+	}
+	public HashSet<Conexion> getListConexiones() {
+		return listConexiones;
+	}
+	public void setListConexiones(HashSet<Conexion> listConexiones) {
+		this.listConexiones = listConexiones;
+	}
+	public Double getPagerank() {
+		return pagerank;
+	}
+	public void setPagerank(Double pagerank) {
+		this.pagerank = pagerank;
+	}
+	public Double getPesoTotal() {
+		return pesoTotal;
+	}
+	public void setPesoTotal(Double pesoTotal) {
+		this.pesoTotal = pesoTotal;
 	}
 	
 	/*
